# roc

./: default.nix
.github/workflows/: ci_zig.yml
crates/compiler/builtins/: Cargo.toml
crates/compiler/builtins/bitcode/: Cargo.toml  build.rs
crates/compiler/builtins/bitcode/src/: lib.rs  main.zig  str.zig
crates/reporting/tests/: test_reporting.rs
docs/langref/: modules.md
examples/: README.md
examples/cli/effects-platform/: host.zig
examples/cli/tui-platform/: host.zig
examples/platform-switching/zig-platform/: host.zig
src/backend/dev/: LirCodeGen.zig
src/backend/wasm/: WasmCodeGen.zig
src/builtins/: host_abi.zig
src/canonicalize/: Can.zig
src/check/: Check.zig
src/cli/: main.zig
src/compile/: compile_build.zig  coordinator.zig
src/docs/: extract.zig  render_html.zig
src/docs/static/: search.js  styles.css
src/echo_platform/: mod.zig
src/echo_platform/platform/: main.roc
src/eval/: interpreter.zig
src/eval/test/: eval_test.zig  highest_lowest_test.zig
src/lsp/: build_session.zig  cir_visitor.zig  position.zig  scope_map.zig  syntax.zig
src/lsp/completion/: builder.zig  context.zig
src/mir/: Lower.zig
src/mono/: Lower.zig
src/repl/: repl_test.zig
src/snapshot_tool/: main.zig
test/echo/: hello.roc  multi.roc
test/fx-open/platform/: host.zig
test/fx/platform/: host.zig
test/snapshots/: test_headerless_main.md
test/snapshots/nominal/: nominal_local.md
test/snapshots/records/: function_record_parameter_capture.md  function_record_parameter_rest.md
test/snapshots/repl/: num_highest_lowest.md
(+14 files in other folders)
