[package]
name = "roc_bitcode"
description = "The low level zig bitcodet that roc depends on for its builtins to function"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]

[build-dependencies]
roc_utils = { path = "../../../utils" }

# dunce can be removed once ziglang/zig#5109 is fixed
dunce = "1.0.3"

[target.'cfg(target_os = "macos")'.build-dependencies]
tempfile.workspace = true
